# YANTRA

./: .env.example  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  PROJECT_DETAILS.md  README.md  index.html  metadata.json  next.config.ts  package-lock.conflicted.json  package-lock.json  package.json  proxy.ts  report-swayam.md  stitch-app.js  tailwind.config.ts  test_ai.py  test_web_apis.py  tsconfig.json
ai/: .env.example  .gitignore  README.md  livekit_terminal_agent.py  main.py  pyproject.toml  terminal_chat.py  test_ai.py  test_web_apis.py
ai/data/: knowledge_index.json
ai/knowledge/: README.md
ai/knowledge/architecture/: intent-detection.md  multi-llm-orchestration.md  rag-knowledge-engine.md  system-prompt-and-persona.md  three-tier-memory.md  tool-suite.md
ai/knowledge/curriculum/: ai-foundations.md  deep-learning.md  machine-learning-core.md  python-for-ai.md  skill-diagnosis-and-roadmap.md  transformers.md
ai/knowledge/data/: knowledge-writing-guide.md  student-context-data-flow.md
ai/knowledge/onboarding/: getting-started-local.md  student-profile-guide.md
ai/knowledge/operations/: deployment-and-web-integration.md  implementation-order-and-cost.md  python-microservice-structure.md  testing-without-website.md
ai/knowledge/platform/: ai-vision.md  basic-build-sequence.md  how-voids-work.md  jarvis-level-differentiators.md  (+4 more)
ai/scripts/: reindex_knowledge.py
ai/tests/: conftest.py  test_chat.py  test_livekit_bridge.py  test_providers.py  test_rag.py  test_room_feedback.py  test_terminal_chat.py
ai/yantra_ai/: __init__.py  app.py
(+245 files in other folders)
